minor fix 2